# ioibot

./: .gitignore  SETUP.md  create_database.py  install-and-run.sh  install.sh  ioi-bot  pyproject.toml  sample.config.yaml  setup.cfg  setup.py
data/: config.default.yaml
docker/: .env  Dockerfile  Dockerfile.dev  build_and_install_libolm.sh  docker-compose.yml  ioibot.service  start-dev.sh  start.sh
ioibot/: __init__.py  bot_commands.py  callbacks.py  chat_functions.py  config.py  create_database.py  entry.py  http_server.py  init.sql  main.py  message_responses.py  storage.py
tests/: test_callbacks.py  test_config.py
webpage/: index.html  script.js  style.css
