[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ioibot"
authors = []
readme = "README.md"
dynamic = ["version", "description"]
dependencies = [
    "Markdown >= 3.1.1",
    "PyYAML >= 5.1.2",
    "aiohttp >= 3.12.13",
    "aiohttp-session >= 2.12.0",
    "asyncpg >= 0.30.0",
    "bcrypt >= 4.0.1",
    "matrix-nio[e2e] >= 0.16.0",
    "pandas >= 2.2.3",
    "python-dotenv >= 1.0.0",
]

[project.scripts]
ioibot = "ioibot.main:main"
